--- a/css/style.css
+++ b/css/style.css
@@ -504,28 +504,16 @@ body {
     left: 799px;
 }
 
-@media (max-width:1200px) {
-
-    .hero_content {
-        left: -80px;
-    }
-}
 
 @media (max-width:992px) {
     .hero_content {
         overflow-y: hidden !important;
-        /* height: 100vh; */
+        min-height: 100vh;
     }
 
-    #hero::before {
-        width: 75%;
-        position: fixed;
+    #hero {
+        width: 100%;
     }
-
-    /* #hero::after {
-        left: 75%;
-        width: 75%;
-    } */
 
     .header_top {
         position: fixed;
@@ -538,12 +526,7 @@ body {
     }
 }
 
-@media (max-width:991.98px) {
-    #hero {
-        width: 140%;
-    }
-
-}
+@media (max-width:991.98px) {}
 
 @media (max-width:767.98px) {
 
