--- a/css/style.css
+++ b/css/style.css
@@ -115,12 +115,21 @@ body {
 
 .main_content .centered_content {
     position: absolute;
-    left: 480px;
-    top: 25vh;
+    left: 460px;
+    top: 22vh;
     border-radius: 100%;
     /* transform: translate(-50%, -50%); */
     background-color: var(--dark-blue);
-    padding: 20px 30px;
+    height: 200px;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main_content .centered_content p {
+    font-size: 18px;
+    text-align: center;
 }
 
 .centered_content_md_screen {
@@ -146,10 +155,6 @@ body {
 }
 
 
-.main_content .centered_content p {
-    text-align: center;
-    font-size: 13px;
-}
 
 #footer {
     color: var(--dark-blue);
@@ -171,22 +176,25 @@ body {
     position: absolute;
     top: -40px;
     height: 60px;
-    left: 100px;
+    left: 200px;
 }
 
 .dash_1 {
-    width: 835px;
+    width: 750px;
     position: absolute;
     top: -10px;
-    left: 190px;
-    border-bottom: 1px dotted black;
-    letter-spacing: 10px;
+    left: 280px;
+    height: 2px;
+    background-image: linear-gradient(to right, #000 30%, rgba(255, 255, 255, 0) 10%);
+    background-position: top;
+    background-size: 10px 1px;
+    background-repeat: repeat-x;
 }
 
 .arrow_left_1 {
     position: absolute;
     top: -22px;
-    left: 185px;
+    left: 270px;
 }
 
 .icons .baggage_icon {
@@ -200,6 +208,7 @@ body {
     position: absolute;
     top: -22px;
     left: 750px;
+
 }
 
 .arrow_left_3 {
@@ -214,61 +223,78 @@ body {
 }
 
 .dash_2 {
-    height: 10px;
-    border: 1px dotted black;
-    width: 1px;
-    left: 130px;
+    height: 20px;
     position: absolute;
+    top: -9px;
+    left: 228px;
+    width: 100px;
+    background-image:
+        linear-gradient(to bottom, #000 10%, rgba(255, 255, 255, 0) 0%);
+    background-position: left;
+    background-size: 3px 8px;
+    background-repeat: repeat-y;
 }
 
 .dash_3 {
     width: 80px;
-    border: 1px dotted black;
     position: absolute;
     top: 13px;
-    left: 52px;
+    left: 152px;
+    height: 2px;
+    background-image: linear-gradient(to right, #000 30%, rgba(255, 255, 255, 0) 10%);
+    background-position: top;
+    background-size: 10px 1px;
+    background-repeat: repeat-x;
 }
 
 .arrow_left_4 {
     position: absolute;
     top: 1px;
-    left: 90px;
+    left: 190px;
 }
 
 .dash_4 {
     height: 10px;
-    width: 1px;
-    border: 1px dotted black;
+    width: 2px;
     position: absolute;
-    top: 15px;
-    left: 51.7px;
+    top: 17px;
+    left: 157px;
+    background-image:
+        linear-gradient(to bottom, #000 10%, rgba(255, 255, 255, 0) 0%);
+    background-position: left;
+    background-size: 8px 8px;
+    background-repeat: repeat-y;
 }
 
 .checking_icon {
     height: 60px;
     position: absolute;
     top: 30px;
-    left: 25px;
+    left: 135px;
 }
 
 .dash_5 {
     width: 95px;
-    border: 1px dotted black;
+    height: 2px;
     position: absolute;
     top: 60px;
-    left: 95px;
+    left: 195px;
+    background-image: linear-gradient(to right, #000 30%, rgba(255, 255, 255, 0) 10%);
+    background-position: top;
+    background-size: 10px 1px;
+    background-repeat: repeat-x;
 }
 
 .arrow_right_1 {
     position: absolute;
     top: 48px;
-    left: 130px;
+    left: 240px;
 }
 
 .all_clear_icon {
     height: 60px;
     position: absolute;
-    left: 200px;
+    left: 300px;
     top: 30px;
 }
 
@@ -279,11 +305,15 @@ body {
 }
 
 .dash_6 {
-    width: 10px;
+    width: 20px;
     position: absolute;
-    border: 1px dotted black;
     top: 80px;
     left: 677px;
+    height: 2px;
+    background-image: linear-gradient(to right, #000 30%, rgba(255, 255, 255, 0) 10%);
+    background-position: top;
+    background-size: 10px 1px;
+    background-repeat: repeat-x;
 }
 
 .clearing_entry_icon {
@@ -298,7 +328,11 @@ body {
     top: 80px;
     position: absolute;
     left: 755px;
-    border: 1px dotted black;
+    height: 2px;
+    background-image: linear-gradient(to right, #000 30%, rgba(255, 255, 255, 0) 10%);
+    background-position: top;
+    background-size: 10px 1px;
+    background-repeat: repeat-x;
 }
 
 .arrow_right_2 {
@@ -315,11 +349,16 @@ body {
 }
 
 .dash_8 {
-    height: 50px;
-    border: 1px dotted black;
-    top: -2px;
+    height: 55px;
+    width: 2px;
+    top: -5px;
     position: absolute;
     left: 865px;
+    background-image:
+        linear-gradient(to bottom, #000 10%, rgba(255, 255, 255, 0) 0%);
+    background-position: left;
+    background-size: 1px 8px;
+    background-repeat: repeat-y;
 }
 
 .third_part .left_part {
@@ -331,44 +370,56 @@ body {
     height: 60px;
     position: absolute;
     top: 138px;
-    left: 100px;
+    left: 210px;
 }
 
 .dash_9 {
     width: 200px;
-    border: 1px dotted black;
     position: absolute;
     top: 135px;
-    left: 130px;
+    left: 230px;
+    height: 2px;
+    background-image: linear-gradient(to right, #000 30%, rgba(255, 255, 255, 0) 10%);
+    background-position: top;
+    background-size: 10px 1px;
+    background-repeat: repeat-x;
 }
 
 .arrow_down_1 {
     position: absolute;
-    left: 225px;
+    left: 325px;
     top: 115px;
 }
 
 .dash_10 {
     height: 10px;
-    border: 1px dotted black;
     position: absolute;
     top: 118px;
-    left: 231px;
+    left: 331px;
+    width: 10px;
+    background-image:
+        linear-gradient(to bottom, #000 10%, rgba(255, 255, 255, 0) 0%);
+    background-position: left;
+    background-size: 1px 8px;
+    background-repeat: repeat-y;
 }
 
 .border_control {
     height: 60px;
     position: absolute;
-    left: 300px;
+    left: 400px;
     top: 139px;
 }
 
 .dash_11 {
     width: 200px;
-    border: 1px dotted black;
     position: absolute;
     top: 200px;
-    left: 130px;
+    left: 230px;
+    height: 2px;
+    background-image: linear-gradient(to right, #000 30%, rgba(255, 255, 255, 0) 10%);
+    background-size: 10px 1px;
+    background-repeat: repeat-x;
 }
 
 .third_part .right_part {
@@ -378,11 +429,15 @@ body {
 
 .dash_12 {
     height: 80px;
-    border: 1px dotted black;
-    width: 1px;
+    width: 2px;
     position: absolute;
     top: 80px;
     left: 675px;
+    background-image:
+        linear-gradient(to bottom, #000 10%, rgba(255, 255, 255, 0) 0%);
+    background-position: left;
+    background-size: 1px 8px;
+    background-repeat: repeat-y;
 }
 
 .arrow_up_1 {
@@ -400,10 +455,13 @@ body {
 
 .dash_13 {
     width: 290px;
-    border: 1px dotted black;
     position: absolute;
     top: 210px;
     left: 705px;
+    height: 2px;
+    background-image: linear-gradient(to right, #000 30%, rgba(255, 255, 255, 0) 10%);
+    background-size: 10px 1px;
+    background-repeat: repeat-x;
 }
 
 .custom2_icon {
@@ -415,11 +473,15 @@ body {
 
 .dash_14 {
     height: 165px;
-    width: 1px;
-    border: 1px dotted black;
+    width: 2px;
     position: absolute;
     top: -5px;
     left: 1025px;
+    background-image:
+        linear-gradient(to bottom, #000 10%, rgba(255, 255, 255, 0) 0%);
+    background-position: left;
+    background-size: 1px 8px;
+    background-repeat: repeat-y;
 }
 
 .arrow_up_2 {
@@ -434,45 +496,52 @@ body {
 
 .dash_15 {
     height: 30px;
-    border: 1px dotted black;
     width: 1px;
     position: absolute;
     top: 200px;
-    left: 230px;
+    left: 330px;
+    background-image:
+        linear-gradient(to bottom, #000 10%, rgba(255, 255, 255, 0) 0%);
+    background-position: left;
+    background-size: 1px 8px;
+    background-repeat: repeat-y;
 }
 
 .border_control_icon2 {
     height: 60px;
     position: absolute;
     top: 230px;
-    left: 200px;
+    left: 300px;
 }
 
 .dash_16 {
-    width: 530px;
-    border: 1px dotted black;
+    width: 400px;
     position: absolute;
     top: 250px;
-    left: 260px;
+    left: 360px;
+    height: 2px;
+    background-image: linear-gradient(to right, #000 30%, rgba(255, 255, 255, 0) 10%);
+    background-size: 10px 1px;
+    background-repeat: repeat-x;
 }
 
 .arrow_right_3 {
     position: absolute;
     top: 238px;
-    left: 330px;
+    left: 390px;
 }
 
 .flight_depart_icon {
     height: 60px;
     position: absolute;
     top: 230px;
-    left: 400px;
+    left: 450px;
 }
 
 .arrow_right_4 {
     position: absolute;
     top: 238px;
-    left: 520px;
+    left: 553px;
 }
 
 .arrived_icon {
@@ -492,21 +561,27 @@ body {
     height: 60px;
     position: absolute;
     top: 230px;
-    left: 780px;
+    left: 760px;
 }
 
 .dash_17 {
     height: 15px;
-    border: 1px dotted black;
     position: absolute;
     top: 215px;
-    left: 805px;
+    left: 790px;
+    width: 2px;
+    background-image:
+        linear-gradient(to bottom, #000 10%, rgba(255, 255, 255, 0) 0%);
+    background-position: left;
+    background-size: 1px 8px;
+    background-repeat: repeat-y;
+
 }
 
 .arrow_up_3 {
     position: absolute;
     top: 210px;
-    left: 799px;
+    left: 784px;
 }
 
 .scroll_more {
@@ -546,16 +621,7 @@ body {
     }
 }
 
-@media (max-width:991.98px) {
-    #hero::before {
-        width: 70%;
-    }
 
-    #hero::after {
-        left: 70%;
-        width: 30%;
-    }
-}
 
 @media (max-width:767.98px) {
 
