--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');
+
 :root {
     --dark-blue: #002663;
     --light-blue: #9dd1ef;
@@ -13,6 +15,7 @@
 
 body {
     max-height: 100vh;
+    font-family: 'Quicksand', sans-serif;
 }
 
 
@@ -62,11 +65,12 @@ body {
 }
 
 .header_top h4 {
+
     padding: 5px 15px;
     background-color: var(--dark-blue);
     margin-right: auto;
     font-size: 16px;
-    font-weight: 550;
+    font-weight: bolder !;
     border-radius: 10px;
 }
 
