--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    z-index: 5;
 }
 
 .header_top h4 {
@@ -70,7 +71,7 @@ body {
     background-color: var(--dark-blue);
     margin-right: auto;
     font-size: 16px;
-    font-weight: bolder !;
+    font-weight: bolder;
     border-radius: 10px;
 }
 
