--- a/css/tooltip2.css
+++ b/css/tooltip2.css
@@ -27,21 +27,40 @@
   z-index: 1;
 }
 
-/* Baggage tooltip */
-
-.mytooltip1 .mytooltiptext7 {
+.mytooltip1 .mytooltiptext9 {
   visibility: hidden;
   position: absolute;
-  left: 670px;
-  top: -80px;
-  width: 200px;
+  left: 270px;
+  top: -50px;
+  width: 150px;
   background-color: white;
   color: black;
   /* margin-left: 10px; */
   border-radius: 6px;
   padding-left: 10px;
   padding-right: 10px;
-  clip-path: polygon(33% 0%, 33% 25%, 100% 25%, 100% 100%, 0 100%, 0 34%, 0 0);
+  clip-path: polygon(60% 0%, 60% 20%, 100% 20%, 100% 100%, 0 100%, 0 34%, 0 0);
+  border-radius: 10px 10px 10px 10px / 10px 10px 10px 10px;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Baggage tooltip */
+
+.mytooltip1 .mytooltiptext7 {
+  visibility: hidden;
+  position: absolute;
+  left: 850px;
+  top: -50px;
+  width: 90px;
+  background-color: white;
+  color: black;
+  /* margin-left: 10px; */
+  border-radius: 6px;
+  padding-left: 10px;
+  padding-right: 10px;
+  clip-path: polygon(70% 0%, 70% 25%, 100% 25%, 100% 100%, 0 100%, 0 34%, 0 0);
   border-radius: 10px;
   /* Position the tooltip */
   position: absolute;
@@ -158,7 +177,7 @@
   border-radius: 6px;
   padding-left: 10px;
   padding-right: 10px;
-  clip-path: polygon(60% 0, 60% 20%, 100% 20%, 100% 100%, 0 100%, 0 34%, 0 0);
+  clip-path: polygon(60% 0, 60% 10%, 100% 10%, 100% 100%, 0 100%, 0 34%, 0 0);
   border-radius: 10px;
   /* Position the tooltip */
   position: absolute;
@@ -176,7 +195,8 @@
 .mytooltip1:hover .mytooltiptext5,
 .mytooltip1:hover .mytooltiptext6,
 .mytooltip1:hover .mytooltiptext7,
-.mytooltip1:hover .mytooltiptext8 {
+.mytooltip1:hover .mytooltiptext8,
+.mytooltip1:hover .mytooltiptext9 {
   animation-name: showtooltip;
   animation-duration: 0.4s;
   animation-fill-mode: forwards;
