--- a/css/style2.css
+++ b/css/style2.css
@@ -24,6 +24,77 @@ body {
   overflow-y: hidden;
 }
 
+.show_nav {
+  height: 50px;
+  background-color: var(--white);
+  position: absolute;
+  top: -10px;
+  right: 4%;
+  display: none;
+  color: #000;
+}
+
+@media (max-width: 992px) {
+  .show_nav {
+    right: 14%;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .show_nav {
+    top: 35px;
+    right: 10%;
+  }
+}
+
+.show_nav.show {
+  padding: 15px;
+  width: auto;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  align-items: center;
+  border-radius: 10px;
+  gap: 10px;
+  animation-name: animate_nav;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  animation-direction: alternate;
+}
+
+.show_nav.show div {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.show_nav.show div small {
+  font-weight: bold;
+}
+
+/* .show_nav.show div img:first-child {
+  width: 60px;
+} */
+
+.toggler_icon {
+  cursor: pointer;
+}
+
+.show_nav.show ~ .toggler_icon {
+  transform: rotate(45deg);
+}
+
+@keyframes animate_nav {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 #hero {
   /* padding: 0 100px; */
   min-height: 100vh;
