--- a/css/style2.css
+++ b/css/style2.css
@@ -67,6 +67,13 @@ body {
 @media (max-width: 420px) {
   .show_nav.show {
     flex-direction: column;
+    justify-content: left;
+    height: auto;
+    width: 100%;
+  }
+  .show_nav.show div {
+    justify-content: flex-start !important;
+    align-items: flex-start !important;
   }
 }
 
@@ -89,6 +96,7 @@ body {
   display: flex;
   gap: 10px;
   align-items: center;
+  justify-content: space-between;
 }
 
 .show_nav.show div small {
