--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,164 @@
     --white: #fff;
 }
 
+.show_nav .show_nav_content {
+    background-color: var(--white);
+    position: absolute;
+    top: -10px;
+    right: 4%;
+    display: none;
+    color: #000;
+  }
+  
+  
+  
+  
+  @media (max-width: 991.98px) {
+    .show_nav.show {
+      top: 35px;
+      right: 0;
+    }
+    .show_nav.show .show_nav_content{
+      flex-direction: column;
+      align-items: flex-start !important;
+      justify-content: flex-start !important;
+      width: 95% !important;
+      height: 30vh;
+      right: 35px;
+    }
+  
+    .show_nav.show .show_nav_content div{
+      margin-bottom: 20px;
+    }
+  
+    .show_nav.show .colors{
+      position: absolute;
+      color: black;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      left: 200px;
+      top: 10px;
+    }
+    .colors div{
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 10px;
+    }.colors div small{
+      font-weight: bold;
+    }
+    .big_yellow{
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+      background-color: limegreen;
+    }
+    .big_orange{
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+      background-color: #f58220;
+    }
+    .big_green{
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+      background-color: #39bdac;
+    }
+    .big_pink{
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+      background-color: #ec008c;
+    }
+  }
+  
+  /* @media (max-width: 767.98px) {
+    .show_nav {
+      top: 10px;
+      right: 14%;
+    }
+  }
+  
+  @media (max-width: 450px) {
+    .show_nav {
+      right: 30px;
+      top: 70px;
+    }
+    .show_nav.show {
+      flex-wrap: wrap;
+    }
+  } */
+  
+  .colors{
+    display: none;
+  }
+  
+  @media (max-width: 420px) {
+    .show_nav.show .show_nav_content{
+      height: 50vh;
+      right: 28px;
+    }
+    .show_nav.show .colors{
+      top: 180px;
+      left: 10px;
+    }
+  }
+  
+  
+  
+  .show_nav.show .show_nav_content {
+    padding: 15px;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    align-items: center;
+    border-radius: 10px;
+    
+    gap: 10px;
+    animation-name: animate_nav;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+    animation-direction: alternate;
+  }
+  
+  .show_nav.show .show_nav_content div {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .show_nav.show .show_nav_content div small {
+    font-weight: bold;
+  }
+  
+  /* .show_nav.show div img:first-child {
+    width: 60px;
+  } */
+  
+  .toggler_icon {
+    cursor: pointer;
+  }
+  
+  .show_nav.show ~ .toggler_icon {
+    transform: rotate(45deg);
+  }
+  
+  @keyframes animate_nav {
+    0% {
+      opacity: 0;
+      transform: scale(0.5);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
 * {
     padding: 0;
     margin: 0;
@@ -53,7 +211,6 @@ body {
     font-size: 16px;
     font-weight: bolder;
     border-radius: 10px;
-
 }
 
 .learn_more {
@@ -87,6 +244,36 @@ body {
     left: 70px;
     font-weight: bolder;
 }
+
+@media (max-width:768px) {
+    .main_content .header2 h4:first-child{
+      top: -70px;
+      left: 10px;
+    }
+    .main_content .header2 h4:last-child{
+      left: 525px !important;
+      top: -70px !important;
+    }
+    
+    .home_icon{
+      left: 10px !important;
+      height: 30px !important;
+    }
+  
+    .dash_1{
+      top: -25px !important;
+      left: 55px !important;
+      width: 500px !important;
+    }
+    .arrow_left_1{
+      top: -37px !important;
+      left: 45px !important;
+    }
+    .baggage_icon{
+      left: 540px !important;
+      height: 30px !important;
+    }
+  }
 
 .main_content .header2 h4:last-child {
     font-size: 20px;
