--- a/css/style.css
+++ b/css/style.css
@@ -257,21 +257,74 @@ body {
     
     .home_icon{
       left: 10px !important;
-      height: 30px !important;
+      height: 40px !important;
     }
   
     .dash_1{
       top: -25px !important;
-      left: 55px !important;
-      width: 500px !important;
+      left: 65px !important;
+      width: 475px !important;
     }
     .arrow_left_1{
       top: -37px !important;
-      left: 45px !important;
+      left: 55px !important;
     }
     .baggage_icon{
       left: 540px !important;
-      height: 30px !important;
+      height: 40px !important;
+    }
+    .arrow_left_2, .arrow_left_3{
+        display: none;
+    }
+    .custom2_icon{
+        top: 120px !important;
+        left: 540px !important;
+        height: 40px !important;
+    }
+    .dash_14{
+        left: 560px !important;
+        height: 120px !important;
+        top: 0px !important;
+    }
+    .covid_icon{
+        left: 460px !important;
+        top: 15px !important;
+        height: 40px !important;
+    }
+    .dash_7{
+        width: 60px !important;
+        top: 35px !important;
+        left: 500px !important;
+    }
+    .arrow_right_2{
+        top: 20px !important;
+        left: 520px !important;
+    }
+    .dash_8{
+        display: none;
+    }
+    .clearing_entry_icon{
+        height: 40px !important;
+        left: 460px !important;
+        top: 68px !important;
+        z-index: 2;
+    }
+    .custom_png_icon{
+        top: 120px !important;
+        left: 460px !important;
+        height: 40px !important;
+    }
+    .arrow_up_1{
+        top: 70px !important;
+        left: 555px  !important;
+    }
+    .dash_12{
+        top: 50px !important;
+        height: 70px !important;
+        left: 480px !important;
+    }
+    .dash_17{
+        display: none;
     }
   }
 
@@ -828,7 +881,7 @@ body {
     }
 
     .centered_content_md_screen {
-        display: flex;
+        display: none;
         align-items: center;
         justify-content: center;
         width: 150px;
